Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120309

Public ABI break in 6.7 beta 1

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 Beta2, 6.8.0 FF
    • 6.7.0 Beta1
    • Core: Other
    • None
    • Linux/X11
    • efaa84902 (dev), f8a8b99f9 (6.7)

    Description

      The symbol

       _Z23qt_qFindChildren_helperPK7QObjectRK11QMetaObjectP5QListIPvE6QFlagsIN2Qt15FindChildOptionEE 

      which demangles to

      qt_qFindChildren_helper(QObject const*, QMetaObject const&, QList<void*>*, QFlags<Qt::FindChildOption>) 

      is missing in 6.7 beta 1.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              thiago Thiago Macieira
              arojas Antonio Rojas
              Votes:
              2 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes